# practice-tool-core

./: .gitignore  Cargo.toml  NOTES.md  README.md
.github/workflows/: lints.yml
launcher/: Cargo.toml
launcher/src/: lib.rs  main.rs
launcher/tests/fixtures/: jdsd_er_practice_tool.toml
src/: controller.rs  key.rs  lib.rs
src/widgets/: flag.rs  group.rs  label.rs  mod.rs  nudge_position.rs  position.rs  radial_menu.rs  savefile_manager.rs  stats_editor.rs  store_value.rs
tasks/: Cargo.toml
tasks/src/: codegen.rs  dist.rs  file_install.rs  lib.rs  params.rs
tests/: harness.rs  integration.rs
windows/: Cargo.toml
windows/src/: lib.rs
