[workspace]
members = [
  "tasks"
]

[workspace.dependencies]
once_cell = "1.19.0"
parking_lot = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }

[package]
name = "practice-tool-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.12"
imgui = "0.12"
once_cell.workspace = true
parking_lot.workspace = true
serde.workspace = true

[dev-dependencies]
glow = "0.12.0"
imgui-glow-renderer = "0.12.0"
imgui-sdl2-support = "0.12.0"
sdl2 = { version = "0.34.5" }
tempfile = "3.10.1"

# TODO: remove this once the fix to imgui-rs/imgui-rs#775 gets released.
[patch.'crates-io']
imgui = { git = "https://github.com/imgui-rs/imgui-rs", rev = "cb8beeb" }
