[workspace]
members = [ 
  "launcher",
  "tasks",
  "windows"
]

[workspace.dependencies]
once_cell = "1.19.0"
parking_lot = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }

[workspace.dependencies.windows]
version = "0.54.0"
features = ["Win32_UI_Input_XboxController"]

[package]
name = "practice-tool-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.12"
imgui = "0.12"
once_cell.workspace = true
parking_lot.workspace = true
serde.workspace = true
windows.workspace = true

[dev-dependencies]
glow = "0.12.0"
imgui-glow-renderer = "0.12.0"
imgui-sdl2-support = "0.12.0"
sdl2 = { version = "0.34.5" }
tempfile = "3.10.1"
